--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,9 +1,15 @@
 name: Update Binaries
+env:
 
 on:
   workflow_dispatch:
-  push:
-    branches: [cron_job]
+    inputs:
+      cuda:
+        description: should cuda be compiled?
+        type: boolean
+        required: true
+  #push:
+  #  branches: [cron_job]
   #schedule:
   #  - cron: "22 22 * * 2"
 
