Added conditional compilation for cuda

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,6 @@
 name: Update Binaries
+env:
+  compile_cuda: false
 
 on:
   workflow_dispatch: {}
@@ -74,7 +76,7 @@ jobs:
           name: llama-bin-win-${{ matrix.build }}-x64.dll
 
   compile-windows-cublas:
-    if: false
+    if: github.env.compile_cuda
     runs-on: windows-latest
     strategy:
       matrix:
@@ -141,16 +143,19 @@ jobs:
         run: |
           ls -R
 
-          cp artifacts/llama-bin-linux-noavx-x64.so/llama-bin-linux-noavx-x64.so deps/linux/noavx/libllama.so
-          cp artifacts/llama-bin-linux-avx-x64.so/llama-bin-linux-avx-x64.so deps/linux/avx/libllama.so
-          cp artifacts/llama-bin-linux-avx2-x64.so/llama-bin-linux-avx2-x64.so deps/linux/avx2/libllama.so
-          cp artifacts/llama-bin-linux-avx512-x64.so/llama-bin-linux-avx512-x64.so deps/linux/avx512/libllama.so
+          cp artifacts/llama-bin-linux-noavx-x64.so/libllama.so deps/linux/noavx/libllama.so
+          cp artifacts/llama-bin-linux-avx-x64.so/libllama.so deps/linux/avx/libllama.so
+          cp artifacts/llama-bin-linux-avx2-x64.so/libllama.so deps/linux/avx2/libllama.so
+          cp artifacts/llama-bin-linux-avx512-x64.so/libllama.so deps/linux/avx512/libllama.so
 
-          cp artifacts/llama-bin-win-noavx-x64.dll/llama-bin-win-noavx-x64.dll deps/win/avx/libllama.dll
-          cp artifacts/llama-bin-win-avx-x64.dll/llama-bin-win-avx-x64.dll deps/win/avx/libllama.dll
-          cp artifacts/llama-bin-win-avx2-x64.dll/llama-bin-win-avx2-x64.dll deps/win/avx2/libllama.dll
-          cp artifacts/llama-bin-win-avx512-x64.dll/llama-bin-win-avx512-x64.dll deps/win/avx512/libllama.dll
+          cp artifacts/llama-bin-win-noavx-x64.dll/libllama.dll deps/win/avx/libllama.dll
+          cp artifacts/llama-bin-win-avx-x64.dll/libllama.dll deps/win/avx/libllama.dll
+          cp artifacts/llama-bin-win-avx2-x64.dll/libllama.dll deps/win/avx2/libllama.dll
+          cp artifacts/llama-bin-win-avx512-x64.dll/libllama.dll deps/win/avx512/libllama.dll
 
+      - name: Rearrange CUDA files
+        if: github.env.compile_cuda
+        run: |
           cp artifacts/llama-bin-win-cublas-cu11.7.1-x64.dll/llama-bin-win-cublas-cu11.7.1-x64.dll cu11.7.1/libllama.dll
           cp artifacts/llama-bin-win-cublas-cu12.1.0-x64.dll/llama-bin-win-cublas-cu12.1.0-x64.dll cu12.1.0/libllama.dll
 
@@ -160,11 +165,13 @@ jobs:
           path: deps/
           name: deps
       - name: Upload artifacts
+        if: github.env.compile_cuda
         uses: actions/upload-artifact@v3
         with:
           path: cu12.1.0/
           name: cu12.1.0
       - name: Upload artifacts
+        if: github.env.compile_cuda
         uses: actions/upload-artifact@v3
         with:
           path: cu11.7.1/
