Removing individual file artifacts after they have been packaged

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -176,3 +176,9 @@ jobs:
         with:
           path: cu11.7.1/
           name: cu11.7.1
+
+      - name: Remove Artifacts
+        uses: geekyeggo/delete-artifact@v2
+        with:
+          name: |
+            llama-*
