--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -77,7 +77,7 @@ jobs:
           name: llama-bin-win-${{ matrix.build }}-x64.dll
 
   compile-windows-cublas:
-    if: ${{ github.env.compile_cuda }}
+    if: env.compile_cuda
     name: Compile (cublas)
     runs-on: windows-latest
     strategy:
@@ -110,7 +110,7 @@ jobs:
           name: llama-bin-win-cublas-cu${{ matrix.cuda }}-x64.dll
     
   compile-macos:
-    if: ${{ github.env.compile_macos }}
+    if: env.compile_macos
     name: Compile (MacOS)
     runs-on: macos-latest
 
