Added binaries generated by this action: https://github.com/SciSharp/LLamaSharp/actions/runs/6002797872/job/16279896150 Based on this version: https://github.com/ggerganov/llama.cpp/commit/6b73ef120114beb5664ea94aab48d07ed248ee52

--- a/LLama.Unittest/LLama.Unittest.csproj
+++ b/LLama.Unittest/LLama.Unittest.csproj
@@ -37,34 +37,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="../runtimes/ggml-metal.metal">
+    <None Update="C:\Users\Martin\Documents\dotnet\LLamaSharp\LLama\runtimes/ggml-metal.metal">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="../runtimes/libllama-cuda11.dll">
+    <None Update="C:\Users\Martin\Documents\dotnet\LLamaSharp\LLama\runtimes/libllama-cuda11.so">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="../runtimes/libllama-cuda11.so">
+    <None Update="C:\Users\Martin\Documents\dotnet\LLamaSharp\LLama\runtimes/libllama-cuda12.so">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="../runtimes/libllama-cuda12.dll">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="../runtimes/libllama-cuda12.so">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="../runtimes/libllama-metal.dylib">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="../runtimes/libllama.dylib">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="../runtimes/libllama.so">
+    <None Update="C:\Users\Martin\Documents\dotnet\LLamaSharp\LLama\runtimes/libllama-metal.dylib">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="Models\codellama-7b.Q3_K_S.gguf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Models\llama-2-7b-chat.ggmlv3.q3_K_S.bin">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
